--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,13 +5,19 @@ html {
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     line-height: 1.6rem;
+    font-weight: 400;
 }
 
-h1,
-h2 {
+h1 {
     font-weight: 900;
     font-size: 1.6rem;
     padding: 20px 40px;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 1.6rem;
+    padding: 20px 20px;
 }
 
 figcaption,
@@ -23,19 +29,12 @@ p {
 
 h3 {
     font-family: 'Roboto';
-    font-size: 1em;
+    font-size: 1.3rem;
     font-weight: 700;
 }
 
-h4 {
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 1em;
-    text-transform: uppercase;
-}
-
 p {
-    font-size: 0.9em;
+    font-size: 1.2rem;
 }
 
 .num {
