--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -23,4 +23,4 @@ $margin: 25px;
 
 /* MediaQuery*/
 
-$breakpoints: ( tablet: 768px, desktop: 1024px, large: 1400px, );
+$breakpoints: ( tablet: 768px, laptop: 1024px, desktop: 1400px, large: 1900px);
