--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -34,12 +34,11 @@
     border: 1px solid transparent;
     border-radius: 30px;
     color: white;
-    width: 180px;
-    height: 40px;
+    width: 220px;
+    height: 50px;
+    font-size: 1.1rem;
     border: none;
-    outline: none;
     cursor: pointer;
-    font-size: 0.8rem;
     font-weight: 500;
     box-shadow: 4px 4px 6px $color-gris;
 }
@@ -99,6 +98,7 @@
 }
 
 @mixin card-figure {
+    width: 100%;
     margin: 0px;
 }
 
@@ -108,7 +108,7 @@
 
 // Pages Menus
 @mixin after {
-    margin-bottom: 25px;
+    margin-top: 20px;
      ::after {
         content: "";
         display: block;
@@ -132,8 +132,13 @@
 
 @mixin title {
     font-family: Shrikhand, sans-serif;
+    font-size: 0.8rem;
+    text-align: left;
     @include flex-config ($flex: 1, $justify-content: space-between, $align-items: center);
-    padding: 10px;
+    padding: 10px 20px 10px 0;
+    @include laptop {
+        justify-content: center;
+    }
 }
 
 @mixin meals {
@@ -156,7 +161,7 @@
         transform: translate(-50px);
     }
     &:hover .fa-check-circle {
-        transform: rotate(360deg);
+        animation: rotate 1s;
     }
 }
 
